Fix checkbox / radiobutton labels alignment

--- a/styles/web/common/base.less
+++ b/styles/web/common/base.less
@@ -875,10 +875,10 @@ input.k-checkbox,
 
 .k-checkbox-label,
 .k-radio-label {
-   //display: inline-block;
+   display: inline-block;
    position: relative;
    padding-left: @checkbox-size + (4 * @checkbox-border-width);
-   vertical-align: middle;
+   vertical-align: text-top;
    line-height: 16px;
    cursor: pointer;
 }
